--- a/sanjeh/release/sanjeh.html
+++ b/sanjeh/release/sanjeh.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="sanjeh">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="sanjeh.html" data-home-page-title="sanjeh" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-cc7b" style="background-image: none"><div class="u-section-rows">
+  <body class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-cc7b" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
           <div class="u-clearfix u-sheet u-sheet-1">
             <h3 class="u-align-right u-custom-font u-text u-text-default u-text-1">نسخه 158<br>
