--- a/sanjeh/release/sanjeh.html
+++ b/sanjeh/release/sanjeh.html
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-gradient u-xl-mode" data-lang="en" style="background-image: linear-gradient(#478ac9, #478ac9);">
-    <section class="u-clearfix u-container-align-center-xs u-section-1" id="sec-fd63">
+    <section class="u-clearfix u-container-align-center-xs u-hidden-lg u-hidden-xl u-section-1" id="sec-fd63">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h4 class="u-align-center u-custom-font u-text u-text-body-alt-color u-text-default u-text-1">آخرین نسخه اپلیکیشن اندرویدی سنجه</h4>
         <h4 class="u-align-center u-custom-font u-text u-text-body-alt-color u-text-default u-text-2">این نسخه در تاریخ زیر آپدیت شده​​ ا​ست</h4>
